test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_extern_func.draco
extern a() int;

proc main() void : a := a; corp;

