test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_read_as_identifier.draco
int read;
 
proc main() void : a := 1; corp;
